# rust_fluid_3d

./: .clippy.toml  .gitignore  Cargo.toml  Makefile  README.md  package-lock.json
.devcontainer/: Dockerfile  devcontainer.json
.github/actions/setup-deps/: action.yaml
.github/actions/setup-release/: action.yaml
.github/workflows/: rust_ci.yaml
core/: Cargo.toml
core/explicit/fdm/: Cargo.toml
core/explicit/fdm/src/: density.rs  fdm.rs  fdm_utils.rs  lib.rs  stress.rs
core/explicit/sph/: Cargo.toml
core/explicit/sph/src/: acceleration.rs  artificial_viscosity.rs  density.rs  lib.rs  neighboring_lists.rs  smoothing.rs  sph.rs  sph_utils.rs  stress.rs  velocity.rs
core/explicit/utils/: Cargo.toml
core/explicit/utils/src/: bs_settings.rs  cfl_condition.rs  error.rs  lib.rs  rw_checkpoint.rs  sim_models.rs  write_csv.rs
core/explicit/utils/src/parameters/: boundary_condition.rs  config.rs  consts.rs  mod.rs  particle_neighbors.rs  particle_status.rs  particles.rs
core/src/: main.rs
core/src/explicit/: acceleration.rs  artificial_viscosity.rs  bs_settings.rs  cfl_condition.rs  density.rs  neighboring_lists.rs  parameters.rs  rw_checkpoint.rs  sim_models.rs  smoothing.rs  sph.rs  sph_utils.rs  stress.rs  velocity.rs  write_csv.rs
core/src/explicit/sph/: Cargo.toml
gui/: .gitignore  package-lock.json  package.json  tsconfig.app.json
gui/src/: App.tsx  ThreeView.tsx  cmd.tsx
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: cmd.rs  main.rs  runner.rs
gui/src-tauri/src/run_sim/: gui_config.rs  gui_state.rs  mod.rs  send_listen.rs
gui/src/api/: log.ts  simulation.ts
gui/src/components/: DrawParticleButton.tsx  LogPanel.tsx  ParameterContext.tsx  ParameterPanel.tsx  RunStopButton.tsx  ThreeCanvas.tsx  ThreeView.tsx
gui/src/components/hooks/: useWatchLog.ts
gui/src/components/providers/parameters/: ParameterContext.tsx  ParameterProvider.tsx  initialParameterState.ts  parameterReducer.ts  types.ts  useParameters.ts
results/: draw_graph.ipynb  draw_kernel.ipynb  draw_model.ipynb  draw_results.ipynb  kernel.csv  params_1767011724436.json  particles_coordinates.csv
src/: lib.rs  main.rs
src/explicit/: acceleration.rs  artificial_viscosity.rs  bs_settings.rs  cfl_condition.rs  density.rs  mod.rs  neighboring_lists.rs  neighoring_lists.rs  parameters.rs  sim_models.rs  smoothing.rs  sph.rs  sph_utils.rs  stress.rs  velocity.rs  write_csv.rs
