[package]
name = "rust_fluid_3d"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
rayon = "1.10.0"

[lints]
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# allow list
derive_partial_eq_without_eq = "allow"
future_not_send = "allow"
multiple_crate_versions = "allow"
pub_with_shorthand = "allow"
redundant_pub_crate = "allow"