[package]
name = "rust_fluid_3d"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
rayon = "1.10.0"
nalgebra = { version = "0.33.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
csv = "1.1"
postcard = { version = "1.1.3", default-features = true }

[lints]
workspace = true
