[package]
name = "rust_fluid_3d"
version.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true
readme.workspace = true

[dependencies]
anyhow = "1.0.93"
rayon = "1.10.0"
nalgebra = { version = "0.33.2", features = ["serde-serialize", "rayon"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
csv = "1.1"
postcard = { version = "1.1.3", default-features = true }
tauri = { version = "2.9.5", features = [] }

[lints]
workspace = true
