[package]
name = "sph"
version.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true
readme.workspace = true

[dependencies]
rayon = "1.10.0"
nalgebra = { version = "0.33.2", features = ["serde-serialize", "rayon"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
csv = "1.1"
snafu = { workspace = true }
postcard = { version = "1.1.3", default-features = true }

# workspace members
utils = { workspace = true }

[lints]
workspace = true
