[package]
name = "utils"
version.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true
readme.workspace = true

[dependencies]
rayon = { workspace = true }
nalgebra = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
snafu = { workspace = true }
postcard = { workspace = true, features = ["alloc"]}
csv = { workspace = true }

[lints]
workspace = true
